# Maat-Graphics

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
docs/GoalDesign/: DesignGoal.aux  DesignGoal.tex  DesignGoal.toc
example/base_game_example/: .gitignore
example/minimal_2D_and_3D/: Cargo.toml
example/minimal_2D_setup/: Cargo.toml
shaders/: collatz.comp  combo.frag  combo.vert  combo_frag.spv  combo_vert.spv  instanced_combo.vert  instanced_combo_vert.spv  instanced_letter_sdf.vert  instanced_letter_sdf_vert.spv  instanced_mesh_animated.vert  instanced_mesh_animated_vert.spv  letter_sdf.frag  letter_sdf.vert  letter_sdf_frag.spv  letter_sdf_vert.spv  light_culling_comp.spv  mesh.frag  mesh.vert  mesh_animated.frag  mesh_animated.vert  mesh_animated_frag.spv  mesh_animated_vert.spv  mesh_frag.spv  mesh_pbr.frag  mesh_pbr.frag.bak  mesh_pbr_frag.spv  mesh_vert.spv  new_text.frag  new_text.vert  new_text_frag.spv  new_text_vert.spv  phat_pbr.frag  phat_pbr.vert  sdf.frag  sdf.vert  sdf_frag.spv  sdf_vert.spv  texture.frag  texture.vert  triange.vert  (+1 more)
src/: camera.rs  core.rs  draw.rs  drawcalls.rs  final_shader.rs  font.rs  generate_terrain.rs  gltf_interpreter.rs  graphics.rs  lib.rs  loader.rs  logs.rs  main.rs  math.rs  model_data.rs  model_shader.rs  opengex-syntax.txt  opengex_parser.rs  ortho_camera.rs  ownage.rs  rawgl.rs  rawvk.rs  resource_manager.rs  settings.rs  shaders.rs  texture_shader.rs  threadpool.rs  vulkano_win_updated.rs  window.rs
src/camera/: mod.rs  ortho_camera.rs  perspective_camera.rs
src/extra/: gltf_loader.rs  math.rs  mod.rs  new_gltf_loader.rs
src/helperfunctions/: mod.rs  opengl_helper.rs  vulkan_2d.rs  vulkan_3d.rs
(+302 files in other folders)
