[package]
name = "maat_graphics"
version = "0.1.0"
authors = ["Lilith645 <lilith@inet-sys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.0"#+1.3.209" #"0.35.2+1.2.203"
ash-window = "0.10.0"
#winit = "0.24.0"
winit = "0.26.1"
image = "0.23.14"
gltf-utils = "0.9.3"
gilrs = "0.8.1"
glam = { version = "0.21.2", features = ["serde"] }

raw-window-handle = "0.3.4"

[dependencies.gltf]
version = "0.16.0"
#features = ["extras", "names", "utils"]
